# aml-foundry-integration

./: .env.example  .gitignore  CONTRIBUTING.md  INTEGRATION_GUIDE.md  README.md  pyproject.toml
azure-ml/: compute_instance.yml  compute_kubernetes.yml
config/: foundry_project.json
docs/: algorithms.md  architecture.md
examples/: __init__.py  job_config.yaml  job_config_kubernetes.yaml  run_bandits.py
notebooks/: 00_environment_and_foundry_agents.ipynb  01_data_sources_assets_imports.ipynb  02_feature_store_and_feature_agent.ipynb  03_bandit_strategy_agent_loop.ipynb  README.md  demo.ipynb
src/aml_bandits/: __init__.py  bandits.py  cli.py  data_loader.py  foundry_bridge.py  metrics.py  preprocessing.py  settings.py  simulator.py  utils.py
tests/: __init__.py  test_settings_and_bridge.py
