[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-foundry-integration"
version = "1.0.0"
description = "Multi-armed bandits for adaptive experimentation on Azure ML Foundry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ricardo Cataldi", email = "ricardo@cataldi.dev" }
]
keywords = [
    "azure-machine-learning",
    "multi-armed-bandits",
    "adaptive-experimentation",
    "ucb",
    "thompson-sampling",
    "kaggle",
    "datathon"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
azure = [
    "azure-ai-ml>=1.0.0",
    "azure-identity>=1.10.0",
    "azure-storage-blob>=12.10.0",
]
kaggle = [
    "kaggle>=1.5.0",
]
ml = [
    "mlflow>=1.30.0",
    "optuna>=3.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]
all = [
    "aml-foundry-integration[azure,kaggle,ml,notebooks,dev]",
]

[project.urls]
Homepage = "https://github.com/Cataldir/aml-foundry-integration"
Documentation = "https://github.com/Cataldir/aml-foundry-integration#readme"
Repository = "https://github.com/Cataldir/aml-foundry-integration.git"
Issues = "https://github.com/Cataldir/aml-foundry-integration/issues"

[project.scripts]
aml-bandits = "aml_bandits.cli:main"

[tool.setuptools]
packages = ["aml_bandits"]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "azure: marks tests requiring Azure credentials",
]

[tool.coverage.run]
source = ["src/aml_bandits"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
